--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,29 @@
 .App {
   text-align: center;
+  border: 1px;
+  border-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.App-logo {
+.button {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+ height: 25px;
+ width: 60px;
+ margin-left: 5px;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +53,5 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
